1. Метод .of [#340233]