@@ -13,16 +13,16 @@ import static ru.job4j.collection.Departments.sortDesc;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -30,7 +30,7 @@ public class DepartmentsTest {
     @Test
     public void whenNaturalSort() {
         List<String> input = Arrays.asList("k2", "k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2");
+        List<String> expect = List.of("k1", "k1/sk1", "k2");
         sortAsc(input);
         assertThat(input, is(expect));
     }
